--- a/Assets/Resources/radial_config_default.json
+++ b/Assets/Resources/radial_config_default.json
@@ -13,21 +13,21 @@
     {
       "key": "1",
       "value": {
-        "bulletCount": 10,
-        "speeds": [10, 10, 10, 10, 10, 10, 10, 10, 10, 10],
-        "angles": [0, 36, 72, 108, 144, 180, 216, 252, 288, 324],
-        "damage": 9,
-        "cooldown": 2.8
-      }
+    "bulletCount": 10,
+  "speeds": [12, 8, 10, 8, 12, 12, 8, 10, 8, 12],
+  "angles": [15, 30, 45, 60, 75, 195, 210, 225, 240, 255],
+  "damage": 24,
+  "cooldown": 2.0
+  }
     },
     {
       "key": "2",
       "value": {
-        "bulletCount": 16,
-        "speeds": [16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16],
-        "angles": [0, 22.5, 45, 67.5, 90, 112.5, 135, 157.5, 180, 202.5, 225, 247.5, 270, 292.5, 315, 337.5],
+        "bulletCount": 12,
+        "speeds": [16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16, 16],
+        "angles": [0, 30, 60, 90, 120, 150, 180, 210, 240, 270, 300, 330],
         "damage": 6,
-        "cooldown": 1.6
+        "cooldown": 2.0
       }
     }
   ]
